--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<title>cat-clicker</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css" media="screen" />
+	<link rel="icon" type="image/png" href="favicon.png" />
 </head>
 <body>
 	<main>
